@@ -352,8 +352,6 @@ RewriteCond "%{HTTPS}" =off
 RewriteRule ^\/npg_ranger\/.* - [E=XPROTOCOL:http]
 RewriteCond "%{HTTPS}" =on
 RewriteRule ^\/npg_ranger\/.* - [E=XPROTOCOL:https]
-# Use ":" as suffix of protocol eg "http:"
-RequestHeader set X-Forwarded-Proto  "%{XPROTOCOL}e:"
 
 #
 # Google OpenID Connect Configuration
