@@ -409,8 +409,7 @@ class RangerController {
       if (!fhost) {
         throw new Error('Bypassing proxy server is not allowed');
       }
-      let fproto = this.request.headers['x-forwarded-proto'] ||
-                   config.provide().get('protocol');
+      let fproto = config.provide().get('protocol');
       fhost = fproto + '//' + fhost;
       fhost = this._trimURL(fhost);
       if (Object.keys(knownProxies).indexOf(fhost) < 0) {
@@ -474,10 +473,10 @@ class RangerController {
    * likely to be running behind a reverse proxy. In this situation the JSON redirection respose
    * will contain the URL on the proxy server.</p>
    *
-   * <p>The controller uses X-Forwarded-Host request header to determine the URL of the proxy server.
-   * The protocol is inferred from X-Forwarded-Proto request header and defaults to http. If the
-   * X-Forwarded-Host-Suffix request header is available, its value will be appended to the
-   * server url (no additional separators are used).</p>
+   * <p>The controller uses X-Forwarded-Host request header to determine the URL
+   * of the proxy server. If the X-Forwarded-Host-Suffix request header is
+   * available, its value will be appended to the server url (no additional
+   * separators are used).</p>
    */
   handleRequest() {
 
